# simple-vector-operations

./: CMakeLists.txt  main.c  matrixn.c  notes.md  vec2.c  vec2.h  vec3.c  vec3.h
cmake_build/: CMakeCache.txt
test/: test.c
